--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,10 +1,21 @@
 <resources>
     <string name="app_name">MyHome</string>
     <string name="action_settings">Settings</string>
-    <string name="device_image">Device Image</string>
-    <string name="Device_Value">Device Value</string>
+    <string name="Device_Image">Device Image</string>
+    <string name="Device_Address">Device Address</string>
+    <string name="Device_Bonded">Device Bonded</string>
     <string name="Device_Name">Device Name</string>
+    <string name="Device_Type">Device Type</string>
     <string name="Device_Class">Device Class</string>
+    <string name="Device_Major_Class">Device Major Class</string>
+
+    <string name="Item_Settings">Item Settings</string>
     <string name="delete">Delete</string>
     <string name="edit">Edit</string>
+
+    <string name="Menu_Item_settings">Settings</string>
+    <string name="Menu_Item_search">Search</string>
+    <string name="Menu_Item_Switch">Switch</string>
+    <string name="Menu_Item_devices">Devices</string>
+
 </resources>
