Added device Info and settings

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">MyHome</string>
+    <string name="app_name">R2Y2</string>
     <string name="action_settings">Settings</string>
     <string name="Device_Image">Device Image</string>
     <string name="Device_Address">Device Address</string>
