--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,11 @@
     <string name="Menu_Item_search">Search</string>
     <string name="Menu_Item_Switch">Switch</string>
     <string name="Menu_Item_devices">Devices</string>
+    <string name="Menu_Item_scan_devices">Scan Devices</string>
+    <string name="Menu_Item_Enable_Disable_Bluetooth">Enable/Disable Bluetooth</string>
+    <string name="bluetoothaction3">Action 3</string>
+    <string name="bluetoothaction1">Action 1</string>
+    <string name="bluetoothaction2">Action 2</string>
+    <string name="bluetooth_device_console_output">Bluetooth Device Console Output</string>
 
 </resources>
