--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,11 +19,12 @@
     <string name="Menu_Item_devices">Devices</string>
     <string name="Menu_Item_scan_devices">Scan Devices</string>
     <string name="Menu_Item_Enable_Disable_Bluetooth">Enable/Disable Bluetooth</string>
-    <string name="bluetoothaction3">Action 3</string>
+    <string name="bluetoothaction3">Connect</string>
     <string name="bluetoothaction1">Pair device</string>
     <string name="bluetoothaction2">Unpair device</string>
     <string name="bluetooth_device_console_output">Bluetooth Device Console Output</string>
     <string name="pair">Pair</string>
     <string name="unpair">Un-Pair</string>
+    <string name="bluetoothaction4">Send message</string>
 
 </resources>
